:hammer: Included js and css minification in build process
:truck: Moved component JavaScript to external file and included in build process
:see_no_evil: Ignored minified files

Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -1,5 +1,9 @@
 {%- set moment = params.moment -%}
 
+{% block javascripts %}
+  <script type="text/javascript" src="/javascripts/filter-component.min.js"/>
+{% endblock %}
+
 {% set tableData = {
     head: [
         { text: "Defendant" },
@@ -211,7 +215,6 @@
     {% if params.subsection === '' %}
         {%- from "components/filter/macro.njk" import pacFilter -%}
         {{ pacFilter({
-            formName: 'listFilterForm',
             filters: params.filters
         }) }}
     {% endif %}
