--- a/server/views/match-manual.njk
+++ b/server/views/match-manual.njk
@@ -37,7 +37,7 @@
 
     <h1 class="govuk-heading-l">{{ title }}</h1>
 
-    <p class="govuk-body">Use a case reference number (CRN) to link to an existing nDelius record to the defendant.</p>
+    <p class="govuk-body">Use a case reference number (CRN) to link to an existing NDelius record to the defendant.</p>
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
@@ -82,7 +82,7 @@
             {% else %}
                 <form name="matchDefendant" id="matchDefendant" action="/{{ params.courtCode }}/match/defendant/{{ params.caseNo }}/confirm" method="post" novalidate>
 
-                    <h3 class="govuk-heading-m">nDelius record found</h3>
+                    <h3 class="govuk-heading-m">NDelius record found</h3>
 
                     <dl class="govuk-summary-list">
                         <div class="govuk-summary-list__row">
