--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -101,14 +101,11 @@
 {% set dateFormat = 'dddd D MMMM' %}
 {% set timeStampDateFormat = 'ddd D MMM' %}
 {% set useTodayDate = moment() if not isSunday else moment().add(1, 'days') %}
-{#{% set useNextDate = moment() if not isSunday else tomorrow %}#}
 {% set currentDate = moment(params.date, 'YYYY-MM-DD') %}
-{#{% set nextDate = currentDate.add(1, 'days') %}#}
 {% set today = moment().format('YYYY-MM-DD') %}
 {% set tomorrow = moment().add(1, 'days').format('YYYY-MM-DD') %}
-{#{% set endDate = moment().add(7, 'days').format('YYYY-MM-DD') %}#}
-{% set withinDateRange = currentDate.isBetween(moment(), params.addBusinessDays(moment(), 7), 'day', '[)') %}
-{#{% set withinDateRange = currentDate.isBetween(moment(), params.addBusinessDays(moment(), params.totalDays - 1), 'day', '[)') %}#}
+{% set withinDateRange = currentDate.isBetween(moment(), params.addBusinessDays(moment(), params.totalDays - 1), 'day', '[)') %}
+{% set useTodayDateWithinDateRange = useTodayDate.isBetween(moment(useTodayDate), params.addBusinessDays(useTodayDate, params.totalDays - 1), 'day', '[)') %}
 
 {%- set listTabs = [{
     title: 'Case list',
@@ -147,67 +144,14 @@
             {{ currentDate.format(dateFormat) }}
         {% endif %}
     </h1>
-    {% set addOneDay = currentDate.add(1, 'days').format('ddd DD') %}
+
         <p class="govuk-!-margin-bottom-7">
-{#            {% if currentDate !== useTodayDate %}#}
-
-{#            if moment.inBtween(today, endDate#}
-            <a class="pac-pagination-link govuk-!-margin-right-5" style="background-color: #e554bb" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(currentDate).format('YYYY-MM-DD') }}">
-                <span class="pac-pagination-link--text">{{ useTodayDate.format('ddd DD') }}</span>
-            </a>
-            <a class="pac-pagination-link govuk-!-margin-right-5" style="background-color: #00ff2a" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(currentDate, 0, 'days').format('YYYY-MM-DD') }}">
-                    <span class="pac-pagination-link--text">{{ useTodayDate.add(1, 'days').format('ddd DD') }}</span>
-            </a>
-            <a class="pac-pagination-link govuk-!-margin-right-5" style="background-color: #6a99fd" href="/{{ params.courtCode }}/cases/{{ currentDate }}">
-                <span class="pac-pagination-link--text">{{ currentDate.add(1, 'days').format('ddd DD') }}</span>
-            </a>
-            <a class="pac-pagination-link govuk-!-margin-right-5" style="background-color: #f8e045" href="/{{ params.courtCode }}/cases/{{ currentDate }}">
-                <span class="pac-pagination-link--text">{{ currentDate.add(1, 'days').format('ddd DD') }}</span>
-            </a>
-            <a class="pac-pagination-link govuk-!-margin-right-5" style="background-color: #d26bff" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(currentDate, -1).format('YYYY-MM-DD') }}">
-                <span class="pac-pagination-link--text">{{ currentDate.add(1, 'days').format('ddd DD') }}</span>
-            </a>
-            <a class="pac-pagination-link govuk-!-margin-right-5" style="background-color: #ec907c" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(currentDate, -1).format('YYYY-MM-DD') }}">
-                <span class="pac-pagination-link--text">{{ currentDate.add(1, 'days').format('ddd DD') }}</span>
-            </a>
-            <a class="pac-pagination-link govuk-!-margin-right-5" style="background-color: #7beac6" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(currentDate, -1).format('YYYY-MM-DD') }}">
-                <span class="pac-pagination-link--text">{{ currentDate.add(1, 'days').format('ddd DD') }}</span>
-            </a>
-{#            {% endif %}#}
-
-{#            {% if withinDateRange %}#}
-{#                <a class="pac-pagination-link" style="background-color: #F6C6CE" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(currentDate, 1).format('YYYY-MM-DD') }}">#}
-{#                    <span class="pac-pagination-link--next pac-pagination-link--text">{{ currentDate.format('ddd DD') }}</span>#}
-{#                    <span class="pac-pagination-link--next pac-pagination-link--text">{{ currentDate.format('ddd DD') }}</span>#}
-{#                    <span class="pac-pagination-link--next pac-pagination-link--text">{{ currentDate.format('ddd DD') }}</span>#}
-{#                </a>#}
-{#            {% endif %}#}
+            {% for daysInWeek in range(0, params.totalDays) %}
+                <a class="pac-pagination-link govuk-!-margin-right-5" style="background-color: #e6ff00" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(useTodayDate, daysInWeek).format('YYYY-MM-DD') }}">
+                    <span class="pac-pagination-link--text">{{ params.addBusinessDays(useTodayDate, daysInWeek).format('ddd D') }}</span>
+                </a>
+            {% endfor %}
         </p>
-
-{#    <p class="govuk-!-margin-bottom-7">#}
-{#        {% if currentDate !== useTodayDate %}#}
-{#            <a class="pac-pagination-link govuk-!-margin-right-5" style="background-color: #C21F39" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(currentDate, -1).format('YYYY-MM-DD') }}">#}
-{#                {%-set formatDate = 'ddd' + '/n' + 'DD' %}#}
-{#                <span class="pac-pagination-link--text">{{ currentDate.format(formatDate) }}</span>#}
-{#            </a>#}
-{#        {% endif %}#}
-{#        {% if currentDate.isAfter(useTodayDate) %}#}
-{#            <a class="pac-pagination-link govuk-!-margin-right-5" style="background-color: #ffdd00" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(currentDate, -1).format('YYYY-MM-DD') }}">#}
-{#                <svg class="pac-pagination-link--icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">#}
-{#                    <path fill="currentColor" d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>#}
-{#                </svg>#}
-{#                <span class="pac-pagination-link--text">{{ currentDate.format('DD-MM') }}</span>#}
-{#            </a>#}
-{#        {% endif %}#}
-{#        {% if withinDateRange %}#}
-{#            <a class="pac-pagination-link" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(currentDate, 1).format('YYYY-MM-DD') }}">#}
-{#                <span class="pac-pagination-link--next pac-pagination-link--text">Next day</span>#}
-{#                <svg class="pac-pagination-link--icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">#}
-{#                    <path fill="currentColor" d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>#}
-{#                </svg>#}
-{#            </a>#}
-{#        {% endif %}#}
-{#    </p>#}
 
     {% if params.unmatchedRecords > 0 %}
         {%- from "components/inset-text/macro.njk" import insetText -%}
