--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -193,7 +193,7 @@
                             </li>
                         {% endfor %}
                     </ul>
-                    <a href="" class=" govuk-body-m govuk-link govuk-link--no-visited-state">View licence conditions details</a>
+                    <a href="/{{ params.courtCode }}/case/{{ data.caseNo }}/record/{{ currentOrder.convictionId }}/licence-details" class=" govuk-body-m govuk-link govuk-link--no-visited-state">View licence conditions details</a>
                 {% endif %}
 
                 {% if currentOrder.pssRequirements | length %}
