--- a/server/views/components/key-details-bar/template.njk
+++ b/server/views/components/key-details-bar/template.njk
@@ -1,40 +1,51 @@
 <section class="pac-key-details-bar" aria-label="Key details">
-    <div class="pac-key-details-bar__key-details">
+    <div class="pac-key-details-bar__key-details pac-display-flex">
 
-        <div class="pac-key-details-bar__right-block">
+        <div class="pac-display-flex__child">
+
+            <div class="pac-display-flex">
+                <div class="pac-display-flex__child">
+                    <h1 class="pac-key-details-bar__name govuk-!-margin-right-4">{% if params.accTitle %}<span
+                                class="govuk-visually-hidden">{{ params.accTitle }}</span>{% endif %}{{ params.title }}</h1>
+                </div>
+                {% if params.crn | length %}
+                    <div class="pac-display-flex__child">
+                        <span class="govuk-body pac-key-details-bar__divider"><strong>CRN: </strong>{{ params.crn }}</span>
+                    </div>
+                {% endif %}
+                {% if params.pnc | length %}
+                    <div class="pac-display-flex__child">
+                        <span class="govuk-body pac-key-details-bar__divider"><strong>PNC: </strong>{{ params.pnc }}</span>
+                    </div>
+                {% endif %}
+            </div>
+
+            {% if params.probationStatus | string | lower !== "possible ndelius record" %}
+                <div class="pac-display-flex govuk-!-margin-top-2">
+                    <div class="pac-display-flex__child">
+                        <span class="govuk-body pac-key-details-bar__divider"><strong>Probation status: </strong>{{ params.probationStatus | string | capitalize }}{% if params.breach %} (Breach){% endif %}</span>
+                    </div>
+                </div>
+            {% endif %}
+
+        </div>
+
+        <div class="pac-display-flex__child pac-display-flex__child__right">
             {% if params.probationStatus == 'No record' %}
                 <form method="get" action="/{{ params.courtCode }}/match/defendant/{{ params.caseNo }}/manual">
-                    <button class="govuk-button govuk-button--secondary govuk-!-margin-bottom-0"
+                    <button class="govuk-button govuk-button--secondary govuk-!-margin-top-2 govuk-!-margin-bottom-2"
                             data-module="govuk-button" type="submit">Link NDelius record
                     </button>
                 </form>
             {% elif params.crn | length and not params.hideUnlinkButton %}
-                <form method="get" action="/{{ params.courtCode }}/match/defendant/{{ params.caseNo }}/unlink/{{ params.crn }}">
-                    <button class="govuk-button govuk-button--secondary govuk-!-margin-bottom-0"
+                <form method="get"
+                      action="/{{ params.courtCode }}/match/defendant/{{ params.caseNo }}/unlink/{{ params.crn }}">
+                    <button class="govuk-button govuk-button--secondary govuk-!-margin-top-2 govuk-!-margin-bottom-2"
                             data-module="govuk-button" type="submit">Unlink NDelius record
                     </button>
                 </form>
             {% endif %}
         </div>
 
-        <div class="pac-key-details-bar__top-block">
-            <h1 class="pac-key-details-bar__name govuk-!-margin-right-6">{% if params.accTitle %}<span
-                        class="govuk-visually-hidden">{{ params.accTitle }}</span>{% endif %}{{ params.title }}</h1>
-            {% if params.crn | length %}
-                <span class="govuk-body pac-key-details-bar__divider"><strong>CRN: </strong>{{ params.crn }}</span>
-            {% endif %}
-            {% if params.pnc | length %}
-                <span class="govuk-body pac-key-details-bar__divider"><strong>PNC: </strong>{{ params.pnc }}</span>
-            {% endif %}
-            {% if params.probationStatus | string | lower == "possible ndelius record" %}
-                <span class="govuk-body pac-key-details-bar__divider"><strong>Probation status: </strong> Possible NDelius record</span>
-            {% endif %}
-        </div>
-        {% if params.probationStatus | string | lower !== "possible ndelius record" %}
-        <div class="pac-key-details-bar__bottom-block">
-            <span class="govuk-body pac-key-details-bar__divider"><strong>Probation status: </strong>{{ params.probationStatus | string | capitalize }}{% if params.breach %} (Breach){% endif %}</span>
-        </div>
-        {% endif %}
-        
     </div>
 </section>
