--- a/server/views/components/key-details-bar/template.njk
+++ b/server/views/components/key-details-bar/template.njk
@@ -1,36 +1,41 @@
 <section class="pac-key-details-bar" aria-label="Key details">
-    <div class="pac-key-details-bar__key-details pac-display-flex">
+    <div class="pac-key-details-bar__key-details pac-key-details-bar-flex">
 
-        <div class="pac-display-flex__child">
+        <div class="pac-key-details-bar-flex__child">
 
-            <div class="pac-display-flex">
-                <div class="pac-display-flex__child">
-                    <h1 class="pac-key-details-bar__name govuk-!-margin-right-4">{% if params.accTitle %}<span
+            <div class="pac-key-details-bar-flex">
+                <div class="pac-key-details-bar-flex__child">
+                    <h1 class="pac-key-details-bar__name govuk-!-margin-right-6">{% if params.accTitle %}<span
                                 class="govuk-visually-hidden">{{ params.accTitle }}</span>{% endif %}{{ params.title }}</h1>
                 </div>
                 {% if params.crn | length %}
-                    <div class="pac-display-flex__child">
-                        <span class="govuk-body pac-key-details-bar__divider"><strong>CRN: </strong>{{ params.crn }}</span>
+                    <div class="pac-key-details-bar-flex__child">
+                        <span class="govuk-body {{ "pac-key-details-bar__divider" if params.pnc | length }}"><strong>CRN: </strong>{{ params.crn }}</span>
                     </div>
                 {% endif %}
                 {% if params.pnc | length %}
-                    <div class="pac-display-flex__child">
-                        <span class="govuk-body pac-key-details-bar__divider"><strong>PNC: </strong>{{ params.pnc }}</span>
+                    <div class="pac-key-details-bar-flex__child">
+                        <span class="govuk-body"><strong>PNC: </strong>{{ params.pnc }}</span>
+                    </div>
+                {% endif %}
+                {% if params.probationStatus | string | lower == "possible ndelius record" %}
+                    <div class="pac-key-details-bar-flex__child">
+                        <span class="govuk-body"><strong>Probation status: </strong> Possible NDelius record</span>
                     </div>
                 {% endif %}
             </div>
 
             {% if params.probationStatus | string | lower !== "possible ndelius record" %}
-                <div class="pac-display-flex govuk-!-margin-top-2">
-                    <div class="pac-display-flex__child">
-                        <span class="govuk-body pac-key-details-bar__divider"><strong>Probation status: </strong>{{ params.probationStatus | string | capitalize }}{% if params.breach %} (Breach){% endif %}</span>
+                <div class="pac-key-details-bar-flex govuk-!-margin-top-2">
+                    <div class="pac-key-details-bar-flex__child">
+                        <span class="govuk-body"><strong>Probation status: </strong>{{ params.probationStatus | string | capitalize }}{% if params.breach %} (Breach){% endif %}</span>
                     </div>
                 </div>
             {% endif %}
 
         </div>
 
-        <div class="pac-display-flex__child pac-display-flex__child__right">
+        <div class="pac-key-details-bar-flex__child pac-key-details-bar-flex__child__right">
             {% if params.probationStatus == 'No record' %}
                 <form method="get" action="/{{ params.courtCode }}/match/defendant/{{ params.caseNo }}/manual">
                     <button class="govuk-button govuk-button--secondary govuk-!-margin-top-2 govuk-!-margin-bottom-2"
