--- a/server/views/components/key-details-bar/template.njk
+++ b/server/views/components/key-details-bar/template.njk
@@ -5,12 +5,12 @@
 
             <div class="pac-key-details-bar-flex">
                 <div class="pac-key-details-bar-flex__child">
-                    <h1 class="pac-key-details-bar__name govuk-!-margin-right-6">{% if params.accTitle %}<span
+                    <h1 class="pac-key-details-bar__name govuk-!-margin-right-4">{% if params.accTitle %}<span
                                 class="govuk-visually-hidden">{{ params.accTitle }}</span>{% endif %}{{ params.title }}</h1>
                 </div>
                 {% if params.crn | length %}
                     <div class="pac-key-details-bar-flex__child">
-                        <span class="govuk-body {{ "pac-key-details-bar__divider" if params.pnc | length }}"><strong>CRN: </strong>{{ params.crn }}</span>
+                        <span class="govuk-body{{ " pac-key-details-bar__divider" if params.pnc | length }}"><strong>CRN: </strong>{{ params.crn }}</span>
                     </div>
                 {% endif %}
                 {% if params.pnc | length %}
@@ -18,34 +18,33 @@
                         <span class="govuk-body"><strong>PNC: </strong>{{ params.pnc }}</span>
                     </div>
                 {% endif %}
-                {% if params.probationStatus | string | lower == "possible ndelius record" %}
-                    <div class="pac-key-details-bar-flex__child">
-                        <span class="govuk-body"><strong>Probation status: </strong> Possible NDelius record</span>
-                    </div>
-                {% endif %}
             </div>
 
-            {% if params.probationStatus | string | lower !== "possible ndelius record" %}
-                <div class="pac-key-details-bar-flex govuk-!-margin-top-2">
-                    <div class="pac-key-details-bar-flex__child">
-                        <span class="govuk-body"><strong>Probation status: </strong>{{ params.probationStatus | string | capitalize }}{% if params.breach %} (Breach){% endif %}</span>
-                    </div>
+            <div class="pac-key-details-bar-flex">
+                <div class="pac-key-details-bar-flex__child pac-probation-status">
+                    <span class="govuk-body"><strong>Probation status: </strong>
+                        {% if params.probationStatus | string | lower !== "possible ndelius record" %}
+                            {{ params.probationStatus | string | capitalize }}{% if params.breach %} (Breach){% endif %}
+                        {% else %}
+                            Possible NDelius record
+                        {% endif %}
+                    </span>
                 </div>
-            {% endif %}
+            </div>
 
         </div>
 
         <div class="pac-key-details-bar-flex__child pac-key-details-bar-flex__child__right">
             {% if params.probationStatus == 'No record' %}
                 <form method="get" action="/{{ params.courtCode }}/match/defendant/{{ params.caseNo }}/manual">
-                    <button class="govuk-button govuk-button--secondary govuk-!-margin-top-2 govuk-!-margin-bottom-2"
+                    <button class="govuk-button govuk-button--secondary pac-key-details-bar__button"
                             data-module="govuk-button" type="submit">Link NDelius record
                     </button>
                 </form>
             {% elif params.crn | length and not params.hideUnlinkButton %}
                 <form method="get"
                       action="/{{ params.courtCode }}/match/defendant/{{ params.caseNo }}/unlink/{{ params.crn }}">
-                    <button class="govuk-button govuk-button--secondary govuk-!-margin-top-2 govuk-!-margin-bottom-2"
+                    <button class="govuk-button govuk-button--secondary pac-key-details-bar__button"
                             data-module="govuk-button" type="submit">Unlink NDelius record
                     </button>
                 </form>
