--- a/server/views/match-defendant.njk
+++ b/server/views/match-defendant.njk
@@ -96,11 +96,12 @@
             <div class="govuk-grid-column-one-half pac-!-grid-column-55 pac-!-border-left govuk-!-padding-left-9">
 
                 <div class="govuk-form-group {{ "govuk-form-group--error" if session.formError }} govuk-!-margin-bottom-0">
+                    {% set recordPluralised = 'record' if data.matchData | length <= 1 else 'records' %}
 
                     {% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
                     {% call govukFieldset({
                         legend: {
-                            text: data.matchData | length + " NDelius records found",
+                            text: data.matchData | length + " NDelius " + recordPluralised +  " found",
                             classes: "govuk-fieldset__legend--m govuk-!-margin-bottom-4",
                             isPageHeading: false
                         }
