--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -65,7 +65,7 @@
                                     <span class="govuk-accordion__section-button govuk-!-font-size-19">{{ offence.offenceTitle }}</span>
                                 </h2>
                             </div>
-                            <div class="govuk-accordion__section-content">
+                            <div class="govuk-accordion__section-content" id="accordion-{{ params.caseNo }}-content-{{ loop.index }}">
                                 <p class="govuk-body govuk-!-margin-bottom-0">{{ offence.offenceSummary }}</p>
                                 <p class="govuk-caption-m govuk-!-margin-top-3">{{ offence.act }}</p>
                             </div>
