--- a/server/views/partials/header.html
+++ b/server/views/partials/header.html
@@ -16,8 +16,11 @@
             </svg>
 
             <a class="moj-header__link moj-header__link--organisation-name" href="/">HMPPS</a>
-            <a class="moj-header__link moj-header__link--service-name" href="/">Prepare a case for sentence</a>
-            <div class="pac-phase-tag"><strong class="govuk-tag pac-header-tag">Beta</strong></div>
+            <span class="moj-header__link--service-name--wrapper"><a
+                    class="moj-header__link moj-header__link--service-name"
+                    href="/">Prepare a case for sentence</a> <span
+                    class="pac-phase-tag"><strong class="govuk-tag">Beta</strong></span>
+            </span>
 
         </div>
         <div class="moj-header__content">
@@ -42,3 +45,4 @@
     </div>
 
 </header>
+
