💩💩💩 days nav not working when in the component

--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -143,65 +143,13 @@
         {% endif %}
     </h1>
 
-{#            <div class="govuk-!-margin-bottom-7 div-p-container">#}
-{#                {% for eachDay in range(0, params.totalDays) %}#}
-{#                {% set dayWord = params.addBusinessDays(useTodayDate, eachDay).format('ddd') %}#}
-{#                {% set dayNumber = params.addBusinessDays(useTodayDate, eachDay).format('D') %}#}
-
-{#                    <p class="pac-pagination-link p-a-container govuk-!-margin-right-5" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(useTodayDate, eachDay).format('YYYY-MM-DD') }}">#}
-{#                        {% set dayWord = params.addBusinessDays(useTodayDate, eachDay).format('ddd') %}#}
-{#                        {% set dayNumber = params.addBusinessDays(useTodayDate, eachDay).format('D') %}#}
-{#                        <a class="pac-pagination-link--text a-span-container">#}
-{#                           {% if eachDay === 0 %}#}
-{#                             <span class="pac-pagination-link--text govuk-focused-text">{{ dayWord }}</span>#}
-{#                             <span class="pac-pagination-link--text govuk-focused-text govuk-!-font-weight-bold">{{ dayNumber }}</span>#}
-{#                           {% endif %}#}
-{#                        </a>#}
-
-{#                        <a class="pac-pagination-link--text a-span-container">#}
-{#                            {% if eachDay > 0 %}#}
-{#                            <span class="pac-pagination-link--text">{{ dayWord }}</span>#}
-{#                            <span class="pac-pagination-link--text govuk-!-font-weight-bold">{{ dayNumber }}</span>#}
-{#                            {% endif %}#}
-{#                        </a>#}
-{#                        {% endfor %}#}
-{#                    </p>#}
-{#            </div>#}
-
-    <p class="govuk-!-margin-bottom-7">
-        {% for eachDay in range(0, params.totalDays) %}
-            {%- set dayWord = params.addBusinessDays(useTodayDate, eachDay).format('ddd') -%}
-            {%- set dayNumber = params.addBusinessDays(useTodayDate, eachDay).format('D') -%}
-{#if each day === 0 for starting or click > blue#}
-            {% if eachDay === 0 %}
-            <a class="pac-pagination-link govuk-!-margin-right-5 govuk-focused-text a-container" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(useTodayDate, eachDay).format('YYYY-MM-DD') }}">
-                <span class="pac-pagination-link--text">{{ dayWord }}</span>
-                <span class="pac-pagination-link--text govuk-!-font-weight-bold">{{ dayNumber }}</span>
-            </a>
-            {% endif %}
-
-            {% if eachDay > 0 %}
-            <a class="pac-pagination-link govuk-!-margin-right-5 govuk-focused-text a-container" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(useTodayDate, eachDay).format('YYYY-MM-DD') }}">
-                <span class="pac-pagination-link--text">{{ dayWord }}</span>
-                <span class="pac-pagination-link--text govuk-!-font-weight-bold">{{ dayNumber }}</span>
-            </a>
-            {% endif %}
-        {% endfor %}
-    </p>
-
-{#        <p class="govuk-!-margin-bottom-7">#}
-{#            {% for eachDay in range(0, params.totalDays) %}#}
-{#                <a class="pac-pagination-link govuk-!-margin-right-5" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(useTodayDate, eachDay).format('YYYY-MM-DD') }}">#}
-{#                    {%- set dayWord = params.addBusinessDays(useTodayDate, eachDay).format('ddd') -%}#}
-{#                    {%- set dayNumber = params.addBusinessDays(useTodayDate, eachDay).format('D') -%}#}
-{#                    {%- set everyDayAndNumber = params.addBusinessDays(useTodayDate, eachDay).format('ddd D') -%}#}
-{#                    <span class="pac-pagination-link--text govuk-focused-text" style="background-color: #F6C6CE">{{ dayWord }}</span>#}
-{#                    <span class="pac-pagination-link--text govuk-focused-text govuk-!-font-weight-bold" style="background-color: #3d2375">{{ dayNumber }}</span>#}
-{#                    <span class="pac-pagination-link--text govuk-focused-text" style="background-color: #F6C6CE">{% if eachDay === 0 %}{{ dayWord }} <br/> {{ dayNumber }} {% endif %}</span>#}
-{#                    <span class="pac-pagination-link--text govuk-focused-text" style="background-color: #008800">{% if eachDay > 0 %}{{ dayWord }} <br/> {{ dayNumber }} {% endif %}</span>#}
-{#                </a>#}
-{#            {% endfor %}#}
-{#        </p>#}
+{%- from "components/days-navigation/macro.njk" import pacDaysNavigation -%}
+    {{ pacDaysNavigation({
+        moment: moment,
+        totalDays: totalDays,
+        startDate: useTodayDate,
+        courtCode: courtCode
+    }) }}
 
     {% if params.unmatchedRecords > 0 %}
         {%- from "components/inset-text/macro.njk" import insetText -%}
