--- a/server/views/components/days-navigation/template.njk
+++ b/server/views/components/days-navigation/template.njk
@@ -1,59 +1,10 @@
-{#            <div class="govuk-!-margin-bottom-7 div-p-container">#}
-{#                {% for eachDay in range(0, params.totalDays) %}#}
-{#                {% set dayWord = params.addBusinessDays(useTodayDate, eachDay).format('ddd') %}#}
-{#                {% set dayNumber = params.addBusinessDays(useTodayDate, eachDay).format('D') %}#}
-
-{#                    <p class="pac-pagination-link p-a-container govuk-!-margin-right-5" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(useTodayDate, eachDay).format('YYYY-MM-DD') }}">#}
-{#                        {% set dayWord = params.addBusinessDays(useTodayDate, eachDay).format('ddd') %}#}
-{#                        {% set dayNumber = params.addBusinessDays(useTodayDate, eachDay).format('D') %}#}
-{#                        <a class="pac-pagination-link--text a-span-container">#}
-{#                           {% if eachDay === 0 %}#}
-{#                             <span class="pac-pagination-link--text govuk-focused-text">{{ dayWord }}</span>#}
-{#                             <span class="pac-pagination-link--text govuk-focused-text govuk-!-font-weight-bold">{{ dayNumber }}</span>#}
-{#                           {% endif %}#}
-{#                        </a>#}
-
-{#                        <a class="pac-pagination-link--text a-span-container">#}
-{#                            {% if eachDay > 0 %}#}
-{#                            <span class="pac-pagination-link--text">{{ dayWord }}</span>#}
-{#                            <span class="pac-pagination-link--text govuk-!-font-weight-bold">{{ dayNumber }}</span>#}
-{#                            {% endif %}#}
-{#                        </a>#}
-{#                        {% endfor %}#}
-{#                    </p>#}
-{#            </div>#}
-
 <p class="govuk-!-margin-bottom-7">
-    {% for eachDay in range(useTodayDate, params.totalDays) %}
-        {%- set dayWord = params.addBusinessDays(useTodayDate, eachDay).format('ddd') -%}
-        {%- set dayNumber = params.addBusinessDays(useTodayDate, eachDay).format('D') -%}
-        {#if each day === 0 for starting or click > blue#}
-        {% if eachDay === 0 %}
-            <a class="pac-pagination-link govuk-!-margin-right-5 govuk-focused-text a-container" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(useTodayDate, eachDay).format('YYYY-MM-DD') }}">
-                <span class="pac-pagination-link--text">{{ dayWord }}</span>
-                <span class="pac-pagination-link--text govuk-!-font-weight-bold">{{ dayNumber }}</span>
-            </a>
-        {% endif %}
-
-        {% if eachDay > 0 %}
-            <a class="pac-pagination-link govuk-!-margin-right-5 govuk-focused-text a-container" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(useTodayDate, eachDay).format('YYYY-MM-DD') }}">
-                <span class="pac-pagination-link--text">{{ dayWord }}</span>
-                <span class="pac-pagination-link--text govuk-!-font-weight-bold">{{ dayNumber }}</span>
-            </a>
-        {% endif %}
+    {% for days in range(0, params.totalDays) %}
+        {%- set thisDate = params.addBusinessDays(params.startDate, days) -%}
+        {%- set isCurrentDate = params.currentDate.isSame(thisDate.format('yyyy-MM-DD')) -%}
+        <{{ "span" if isCurrentDate else "a" }} class="pac-pagination-link govuk-!-margin-right-5 govuk-focused-text a-container" href="{{ thisDate.format('yyyy-MM-DD') }}">
+            <span class="pac-pagination-link--text">{{ thisDate.format('ddd') }}</span>
+            <span class="pac-pagination-link--text govuk-!-font-weight-bold">{{ thisDate.format('D') }}</span>
+        </{{ "span" if isCurrentDate else "a" }}>
     {% endfor %}
 </p>
-
-{#        <p class="govuk-!-margin-bottom-7">#}
-{#            {% for eachDay in range(0, params.totalDays) %}#}
-{#                <a class="pac-pagination-link govuk-!-margin-right-5" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(useTodayDate, eachDay).format('YYYY-MM-DD') }}">#}
-{#                    {%- set dayWord = params.addBusinessDays(useTodayDate, eachDay).format('ddd') -%}#}
-{#                    {%- set dayNumber = params.addBusinessDays(useTodayDate, eachDay).format('D') -%}#}
-{#                    {%- set everyDayAndNumber = params.addBusinessDays(useTodayDate, eachDay).format('ddd D') -%}#}
-{#                    <span class="pac-pagination-link--text govuk-focused-text" style="background-color: #F6C6CE">{{ dayWord }}</span>#}
-{#                    <span class="pac-pagination-link--text govuk-focused-text govuk-!-font-weight-bold" style="background-color: #3d2375">{{ dayNumber }}</span>#}
-{#                    <span class="pac-pagination-link--text govuk-focused-text" style="background-color: #F6C6CE">{% if eachDay === 0 %}{{ dayWord }} <br/> {{ dayNumber }} {% endif %}</span>#}
-{#                    <span class="pac-pagination-link--text govuk-focused-text" style="background-color: #008800">{% if eachDay > 0 %}{{ dayWord }} <br/> {{ dayNumber }} {% endif %}</span>#}
-{#                </a>#}
-{#            {% endfor %}#}
-{#        </p>#}
