something in the css

--- a/public/stylesheets/app/_navigation-days.scss
+++ b/public/stylesheets/app/_navigation-days.scss
@@ -2,48 +2,26 @@
   @extend .govuk-link--no-visited-state;
 }
 
-//.pac-day-nav {
-//  display: flex;
-//  flex-direction: row;
-//}
-//
-//.pac-nav-item {
-//  display: flex;
-//  text-align: center;
-//}
-//
-//.pac-nav-item-text {
-//  display: flex;
-//}
-//
-//.pac-day-nav-item-text:active {
-//  background-color: govuk-colour("light-grey");
-//}
-//
-//.today-day{
-//  background-color: govuk-colour("blue");
-//  color: govuk-colour("white");
-//}
-
-.p-container{
+.nav-bar{
   display: flex;
   flex-direction: row;
 }
 
-.a-container:hover{
+.day-element:hover{
   background-color: govuk-colour("light-grey");
 }
-.a-container:active{
+
+span{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+span:active{
   background-color: govuk-colour("blue");
   color: govuk-colour("white");
 }
-.span-container{
-  display: flex;
-  text-align: center;
-  flex-direction: row;
+
+.today{
+  background-color: #6e3619;
 }
-//
-//.span-container-today::before{
-//    content: "\a";
-//    white-space: pre;
-//}
