:recycle: Refactored and simpified CSS
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/public/stylesheets/app/all.scss
+++ b/public/stylesheets/app/all.scss
@@ -5,10 +5,9 @@
 @import "inset-text";
 @import "key-details";
 @import "last-updated";
-@import "pagination";
+@import "days-navigation";
 @import "section-break";
 @import "header";
 @import "dashboard-count";
 @import "white-space-format";
 @import "secondary-text";
-@import "navigation-days";
