--- a/server/views/components/days-navigation/template.njk
+++ b/server/views/components/days-navigation/template.njk
@@ -5,7 +5,7 @@
         <{{ "span" if isCurrentDate else "a" }} class="pac-days-navigation-item{{ " pac-days-navigation-item__link" if not isCurrentDate }}" href="{{ thisDate.format('yyyy-MM-DD') }}">
 
             <span>{{ thisDate.format('ddd') }} </span>
-            <span class="govuk-!-font-weight-bold">{{ thisDate.format('D') }}</span>
+            <span class="govuk-!-font-size-24 govuk-!-font-weight-bold">{{ thisDate.format('D') }}</span>
 
         </{{ "span" if isCurrentDate else "a" }}>
     {% endfor %}
